force-app/main/default/objects/sf_devops__Vcs_Synch_State__c/fields/sf_devops__Last_Synch_Date__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Last_Synch_Date__c</fullName>
    <description>Date and Time when this was last synchronized with the VCS.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Synch Date</label>
    <type>DateTime</type>
</CustomField>