force-app/main/default/objects/sf_devops__Vcs_Synch_State__c/fields/sf_devops__Project__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Project that this state belongs to</description>
    <label>Project</label>
    <referenceTo>sf_devops__Project__c</referenceTo>
    <relationshipLabel>Synch States</relationshipLabel>
    <relationshipName>Synch_States</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>